# fishingcomp

./: .gitignore  README.md  types.ts
app/: .air.toml  .gitignore  CMakeLists.txt  Makefile
app/sql/: config.yaml  queries.c  queries.sql  schema.sql
app/src/: main.c  ui_window.c
app/src/db/: models.h  queries.c  queries.h  schema.h
app/tool/sql2c/: main.go
appsmith/: .gitignore  Fishing Comp Admin.json  docker-compose.yml
appsmith/assets/: murrabitcodchallenge-logo.base64
cweb/: .air.toml  .gitignore  CLAUDE.md  CMakeLists.txt  notes.txt
cweb/api/: api.h  api_json.c  config.yaml  spec.yaml
cweb/codegen/: api.h  api_json.c  example.yaml  main.go
cweb/oapi2c/: api.h  go.mod  main.go
cweb/oapi2c/example/: config.yaml
cweb/patches/: ecewo-spawn-arena-fix.patch  fix-arena-reset-race.md  fix-arena-reset-race.patch
cweb/sql/: Makefile  config.yaml  go.mod  models.h  queries.c  queries.h  queries.sql  schema.sql  sqlc.yaml
cweb/sql/model/: models.h  queries.sql.c
cweb/sql2c/: go.mod  main.go  sql2c
cweb/src/: api.h  api_json.c  cweb.h  handlers.c  log_handlers.c  main.c  models.h  queries.c  queries.h  schema.h  users.c
cweb/tool/: bin2c.c
cweb/tool/oapi2c/: main.go
cweb/tool/oapi2c/example/: spec.yaml
cweb/tool/sql2c/: go.mod  main.go
fishing/: .gitignore  README.md  mix.exs
fishing/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
fishing/lib/: fishing.ex  fishing_web.ex
fishing/lib/fishing/: application.ex  competitor.ex  mailer.ex  registration.ex  repo.ex
fishing/lib/fishing/registration/: competitors.ex
fishing/lib/fishing_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
fishing/lib/fishing_web/components/: core_components.ex  layouts.ex
fishing/lib/fishing_web/components/layouts/: root.html.heex
fishing/lib/fishing_web/controllers/: error_html.ex  error_json.ex  page_controller.ex  page_html.ex
fishing/lib/fishing_web/live/competitors_live/: form_component.ex  index.ex  index.html.heex  show.ex  show.html.heex
fishing/priv/repo/: seeds.exs
fishing/priv/repo/migrations/: 20240324223607_create_competitor.exs
fishing/test/: test_helper.exs
fishing/test/fishing/: registration_test.exs
fishing/test/fishing_web/controllers/: error_html_test.exs  error_json_test.exs  page_controller_test.exs
fishing/test/fishing_web/live/: competitors_live_test.exs
fishing/test/support/: conn_case.ex  data_case.ex
fishing/test/support/fixtures/: registration_fixtures.ex
live/: .air.toml  .gitignore  README.md  gen.go  go.mod  go.sum  package-lock.json  package.json  sqlc.yaml
live/.github/workflows/: go.yaml
live/ai/: gemini.go  prompt.txt
live/api/: config.yaml  spec.yaml
live/cmd/fishlive/: main.go
live/handler/: upload.go
live/internal/htmx/: htmx_test.go
live/src/: app.d.ts  hooks.server.ts
live/src/routes/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
migrator/: main.go
postgres/: seed.sql
postgres/migrations/: 001_init_schema.sql  002_catch_submit.sql  002_public_views.sql  003_catch_submit.sql  20230401204604_functions.sql  20230401205711_public_views.sql  go.mod  migrate.go  tern.conf
postgres/migrations/code/: functions.sql  install.sql
postgres/murrabitcodchallenge_legacy/: catch.sql  cleanup.sql  competitor.sql  migrate.sql  queries.sql  setup.sql  team.sql
postgres/murrabitcodchallenge_legacy/2009/: boat.csv  catch.csv  competitor.csv  murrabit-cod-challenge-2009.sql
postgres/murrabitcodchallenge_legacy/2010/: boat.csv  catch.csv  competitor.csv  murrabit-cod-challenge-2010.sql
postgres/murrabitcodchallenge_legacy/2011/: boat.csv  catch.csv  competitor.csv  murrabit-cod-challenge-2011.sql
postgres/murrabitcodchallenge_legacy/2012/: boat.csv  catch.csv  competitor.csv  murrabit-cod-challenge-2012.sql
postgres/murrabitcodchallenge_legacy/2013/: boat.csv  catch.csv  competitor.csv  murrabit-cod-challenge-2013.sql
postgres/murrabitcodchallenge_legacy/2014/: boat.csv  catch.csv  competitor.csv  murrabit-cod-challenge-2014.sql
postgres/murrabitcodchallenge_legacy/2015/: boat.csv  catch.csv  competitor.csv  murrabit-cod-challenge-2015.sql
postgres/murrabitcodchallenge_legacy/2016/: boat.csv  catch.csv  competitor.csv  murrabit-cod-challenge-2016.sql
postgres/murrabitcodchallenge_legacy/2017/: boat.csv  catch.csv  competitor.csv  murrabit-cod-challenge-2017.sql
postgres/murrabitcodchallenge_legacy/2018/: boat.csv  catch.csv  competitor.csv  murrabit-cod-challenge-2018.sql
postgres/murrabitcodchallenge_legacy/2019/: boat.csv  catch.csv  competitor.csv  murrabit-cod-challenge-2019.sql
postgres/murrabitcodchallenge_legacy/2021/: boat.csv  catch.csv  competitor.csv  murrabit-cod-challenge-2021.sql
postgres/murrabitcodchallenge_legacy/2022/: boat.csv  catch.csv  competitor.csv  murrabit-cod-challenge-2022.sql
postgres/queries/: catch.sql
postgres/seed/: murrabitcodchallenge.sql
supabase/: config.toml  seed.sql
supabase/migrations/: 20230401200050_init_schema.sql  20230401204704_catch_submit.sql
web/: Caddyfile  index.php  routes.php
web/lib/: auth.php  config.php  db.php  worker.php
web/public/: index.php
web/shared/: header.php
worker/: go.mod  go.sum  main.go
worker/job/: email.go  slack.go
worker/migrations/: migrate.go
